<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="409dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView3"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_launcher_petlover_v1_round"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/registro_en_petlover"
            android:textColor="@color/login"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsuario"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/nombre_de_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNombreUsuario"
                android:textColor="@color/active"
                android:drawableStart="@drawable/ic_baseline_account_circle_violet"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/correo_electr_nico">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textCorreo"
                android:textColor="@color/active"
                android:drawableStart="@drawable/icon_email"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="260dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            app:endIconMode="password_toggle"
            app:helperText="Sensible a caracteres en mayúscula">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textpassword"
                android:drawableStart="@drawable/icon_password"
                android:textColor="@color/active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordDos"
            android:layout_width="260dp"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrase_a"
            app:endIconMode="password_toggle"
            app:helperText="Sensible a caracteres en mayúscula">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textpassWordConfirmar"
                android:drawableStart="@drawable/icon_password"
                android:textColor="@color/active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="@color/login"
            android:text="@string/registrarme"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="50dp"
            app:layout_constraintVertical_bias="0.006"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtVolver"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/active"
            android:text="Volver al login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>