<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardBase"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="6dp"
    android:layout_width="match_parent"
    android:layout_height="480dp">

    <LinearLayout
        android:id="@+id/linearPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearEncabezado"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp"
            android:weightSum="1"
            android:layout_height="42dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPerfilClinica"
                android:src="@drawable/ic_outline_account_circle_black"
                android:paddingStart="6dp"
                android:paddingTop="2dp"
                android:layout_width="0dp"
                android:layout_weight="0.12"
                android:layout_height="35dp"/>

            <LinearLayout
                android:id="@+id/linearUsuario"
                android:orientation="vertical"
                android:paddingTop="2dp"
                android:layout_width="0dp"
                android:layout_weight="0.78"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtNombreClinicaUsuario"
                    android:textSize="16sp"
                    android:hint="@string/nombre_de_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/categoria"
                    android:textSize="11sp"
                    android:hint="@string/categor_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imgMenu"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:paddingStart="6dp"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="35dp"/>


        </LinearLayout>

        <ImageView
            android:id="@+id/imgPublicacion"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:layout_margin="0dp"
            android:contentDescription="@string/imagen_de_publicacion"
            android:scaleType="centerCrop"
            android:src="@drawable/vaciogeneral" />

        <TextView
            android:id="@+id/textTituloPublicacion"
            android:maxLines="2"
            android:hint="@string/titulo_de_publicacion"
            android:textAlignment="viewStart"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:paddingBottom="5dp"
            android:weightSum="1"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/cardview_light_background"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/textDescripcion"
                    android:hint="@string/descripcion_de_publicacion"
                    android:maxLines="4"
                    android:ellipsize="end"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/imgFavorito"
                    android:src="@drawable/icon_no_presionado"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:id="@+id/favCount"
                    android:textSize="15sp"
                    android:textColor="@color/gray_600"
                    android:textAlignment="center"
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>