<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginInicial">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top" />

   <ImageView
        android:id="@+id/imageView5"
        android:layout_width="409dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bot" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="184dp"
        android:layout_height="142dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/bienvenido_a_petlover"
        android:textColor="@color/login"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/email_sesion"
        android:layout_width="245dp"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/morado"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/contra_sesion"
        android:layout_width="245dp"
        android:layout_height="34dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/morado"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sesion" />


    <Button
        android:id="@+id/btnSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/login"
        android:text="Iniciar sesion"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra_sesion"
        app:layout_constraintVertical_bias="0.006"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:text="@string/o_ingresar_con"
        android:textColor="@color/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button_Google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnSesion"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/txtReestablecer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/olvidaste_tu_contrasena"
            android:textAlignment="center"
            android:textColor="@color/reestablecer"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/txtRegister"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:text="@string/registrarme_con_mi_correo"
            android:textAlignment="center"
            android:textColor="@color/reestablecer"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
