<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:viewBindingIgnore="true"
    android:layout_marginBottom="20dp"
    android:background="?android:attr/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!-- INICIO DEL HEADER -->

    <LinearLayout android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        tools:viewBindingIgnore="true"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userProfilew"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="14dp"
            android:scaleType="fitCenter"
            android:layout_weight="0.25"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_outline_account_circle_black"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="0.75"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="24sp"
                android:textColor="?android:attr/textColorPrimary"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="@string/txt_usuario" />

            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_marginStart="24dp"
                android:textSize="16sp"
                android:layout_marginEnd="24dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:text="@string/txt_email" />

        </LinearLayout>


    </LinearLayout>

    <!-- FIN DEL HEADER -->


    <LinearLayout
        android:id="@+id/layoutExit"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:padding="8dp">


        <ImageView
            android:id="@+id/imgCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_error"
            android:src="@drawable/ic_baseline_exit_to_app_"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_error"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_cerrar_seion"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>